wxc/include/ewxw/wxc_glue.h

TChar      wxColour_Blue( TSelf(wxColour) _obj );
void       wxColour_Copy( TSelf(wxColour) _obj, void* _other );
void*      wxColour_CreateByName( TStringVoid _name );
TClass(wxColour) wxColour_CreateEmpty(  );
void*      wxColour_CreateRGB( TChar _red, TChar _green, TChar _blue );
void       wxColour_Delete( TSelf(wxColour) _obj );
int        wxColour_GetPixel( TSelf(wxColour) _obj );
TChar      wxColour_Green( TSelf(wxColour) _obj );
TBool      wxColour_Ok( TSelf(wxColour) _obj );
TChar      wxColour_Red( TSelf(wxColour) _obj );
void       wxColour_Set( TSelf(wxColour) _obj, TChar _red, TChar _green, TChar _blue );
void       wxColour_SetByName( TSelf(wxColour) _obj, TStringVoid _name );
TBoolInt   wxColour_ValidName( TStringVoid _name );